--- a/client/src/index.css
+++ b/client/src/index.css
@@ -36,7 +36,7 @@ body {
 }
 
 .gradient-bg-footer {
-  background-color: #0f0e13;
+  background-color: white;
   background-image: 
     radial-gradient(at 0% 100%, hsla(253,16%,7%,1) 0, transparent 53%), 
     radial-gradient(at 50% 150%, hsla(339,49%,30%,1) 0, transparent 50%);
@@ -60,7 +60,7 @@ body {
   border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
-.eth-card {
+.bitcoin-card {
   background-color:#a099ff;
   background-image: 
     radial-gradient(at 83% 67%, rgb(152, 231, 156) 0, transparent 58%), 
